# infra-version-bot

./: .clang-format  CMakeLists.txt  Dockerfile  dynamic_config.json  static-config.yaml
src/: infra_version_handler.cpp  infra_version_handler.hpp  main.cpp
src/utils/: gitlab.cpp  gitlab.hpp
